<?xml version="1.0"?>
<package format="2">
  <name>dwm_wrapper</name>
  <version>1.0.0</version>
  <description>
  dwm_wrapper is a ROS wrapper for interfacing with the dwm1001 UWB module.
  </description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/robot/dwm1001</url>

  <buildtool_depend>catkin</buildtool_depend>  
  
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <build_depend>message_generation</build_depend>
  
  <!-- <build_depend>diagnostic_updater</build_depend>   -->
  <!-- <build_depend>roslint</build_depend> -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>dynamic_reconfigure</exec_depend> -->
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
